--- a/ch03-code-listing.ipynb
+++ b/ch03-code-listing.ipynb
@@ -635,6 +635,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Visualize expression tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy\n",
+    "\n",
+    "x, y = sympy.symbols(\"x y\")\n",
+    "\n",
+    "expr = x**2 + x*y\n",
+    "\n",
+    "expr\n",
+    "sympy.srepr(expr)\n",
+    "\n",
+    "print(sympy.dotprint(x+2))\n",
+    "# Copy output into:\n",
+    "# https://dreampuf.github.io/GraphvizOnline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simplification"
    ]
   },
@@ -1464,9 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x0 = sympy.Symbol(\"{x_0}\")"
@@ -2089,9 +2114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 (NPM ed2)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3.6-npm-e2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2103,7 +2128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
